third_party/rust/chromium_crates_io/vendor/zerocopy-0.8.23/tests/ui-stable/try_transmute_mut-alignment-increase.stderr
error[E0512]: cannot transmute between types of different sizes, or dependently-sized types
  --> tests/ui-stable/try_transmute_mut-alignment-increase.rs:20:47
   |
20 |     let increase_size: Result<&mut AU16, _> = try_transmute_mut!(src);
   |                                               ^^^^^^^^^^^^^^^^^^^^^^^
   |
   = note: source type: `AlignOf<[u8; 2]>` (8 bits)
   = note: target type: `MaxAlignsOf<[u8; 2], AU16>` (16 bits)
   = note: this error originates in the macro `$crate::assert_align_gt_eq` which comes from the expansion of the macro `try_transmute_mut` (in Nightly builds, run with -Z macro-backtrace for more info)
